--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "prompt-compiler",
   "version": "1.0.0",
   "title": "Prompt Compiler",
-  "description": "Translate input in any language into high-quality English prompts and copy to clipboard for any LLM.",
+  "description": "BYOK multi-provider command to translate any language into polished English and an LLM-ready prompt.",
   "icon": "icon.png",
   "author": "dishangyijiao",
   "license": "MIT",
@@ -14,10 +14,12 @@
     "dev": "ray develop",
     "fix-lint": "ray lint --fix",
     "lint": "ray lint",
+    "test": "jest --runInBand",
     "publish": "npx @raycast/api@latest publish"
   },
   "keywords": [
     "prompt",
+    "BYOK",
     "LLM",
     "translate",
     "clipboard",
@@ -29,18 +31,21 @@
     "Kimi"
   ],
   "dependencies": {
-    "@raycast/api": "^1.69.0"
+    "@raycast/api": "^1.104.3"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@raycast/eslint-config": "^1.0.11",
-    "@types/node": "^20.14.10",
+    "@types/node": "22.13.10",
     "eslint": "^8.56.0",
+    "jest": "^30.2.0",
     "prettier": "^3.3.3",
-    "react": "^18.2.0",
+    "react": "19.0.0",
+    "ts-jest": "^29.4.5",
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "19.0.0"
   },
   "preferences": [
     {
@@ -78,9 +83,9 @@
     {
       "name": "index",
       "title": "Compile Prompt",
-      "description": "Paste text in any language, get English translation + optimized prompt (Markdown), copied to clipboard.",
+      "description": "Paste or select text, then generate translation, optimized prompt, or both and copy to clipboard.",
       "mode": "view",
-      "keywords": ["translate", "prompt", "LLM", "clipboard"]
+      "keywords": ["translate", "prompt", "LLM", "clipboard", "BYOK"]
     }
   ]
 }
