--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "raycast-env.d.ts"]
 }
